fix: fixing slogan position in desktop version, fixing scrollbar on image galery

--- a/frontend/fe-digital-booking/src/components/Header/Header.module.scss
+++ b/frontend/fe-digital-booking/src/components/Header/Header.module.scss
@@ -99,6 +99,9 @@
   .header-container {
     height: 80px;
     padding: 15px 40px 15px 40px;
+    a {
+      width: 100%;
+    }
   }
   .slogan {
     display: inline;
