--- a/frontend/fe-digital-booking/src/styles/_reset.scss
+++ b/frontend/fe-digital-booking/src/styles/_reset.scss
@@ -35,7 +35,3 @@ a {
   text-decoration: none;
   color: $color-tertiary;
 }
-
-::-webkit-scrollbar {
-  display: none;
-}
